SNTAB-58 WIP Add swagger documentation
